# silkworm

./: Cargo.toml  README.md
docs/: features.md  keywords.md  pragmas.md
silkworm/: Cargo.toml
silkworm_err/: Cargo.toml
silkworm_err/src/: error.rs  lib.rs
silkworm_features/: Cargo.toml
silkworm_features/src/: lib.rs
silkworm_rt/: Cargo.toml
silkworm_sourcemap/: Cargo.toml
silkworm_sourcemap/src/: lib.rs  span.rs
silkworm_syn/: Cargo.toml
silkworm_syn/src/: ast.rs  lex.rs  lib.rs  parse.rs  ptr.rs  refine.rs  span.rs  symbol.rs  token.rs
silkworm_syn/src/ast/: visit.rs
silkworm_syn/src/lex/: parse.rs
silkworm_syn/src/parse/: block.rs  expr.rs  list.rs  misc.rs  node.rs  pragma.rs  str.rs
silkworm_syn/src/refine/: block_regroup.rs  deny_pragmas.rs  desugar_decorators.rs  duplicate_headers.rs  feature_gate.rs  option_grouping.rs  report_err.rs  validate_pragmas.rs
silkworm_syn/src/symbol/: pin_buf.rs
