[package]
name = "silkworm_err"
version = "0.1.0-dev.1"
authors = ["The silkworm developers"]
edition = "2018"
description = "Compiler diagnostics for silkworm."
documentation = "https://docs.rs/crate/silkworm_err"
repository = "https://github.com/silkworm-rs/silkworm"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
silkworm_sourcemap = { version = "0.1.0-dev.1", path = "../silkworm_sourcemap" }
typed-arena = "2.0"
backtrace = "0.3"
