[package]
name = "silkworm_syn"
version = "0.1.0-dev.0"
authors = ["The silkworm developers"]
edition = "2018"
description = "Parser for the Yarn interactive dialogue language. Internal dependency of silkworm."
documentation = "https://docs.rs/crate/silkworm_syn"
repository = "https://github.com/silkworm-rs/silkworm"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
arrayvec = "0.5.1"
thiserror = "1.0"
hashbrown = { version = "0.7", features = ["raw"] }
unicode-xid = "0.2"