[package]
name = "silkworm_syn"
version = "0.1.0-dev.1"
authors = ["The silkworm developers"]
edition = "2018"
description = "Parser for the Yarn interactive dialogue language. Internal dependency of silkworm."
documentation = "https://docs.rs/crate/silkworm_syn"
repository = "https://github.com/silkworm-rs/silkworm"
license = "MIT"

[badges]
maintenance = { status = "experimental" }

[dependencies]
silkworm_err = { version = "0.1.0-dev.1", path = "../silkworm_err" }
silkworm_sourcemap = { version = "0.1.0-dev.1", path = "../silkworm_sourcemap" }
silkworm_features = { version = "0.1.0-dev.1", path = "../silkworm_features" }
arrayvec = "0.5.1"
thiserror = "1.0"
hashbrown = { version = "0.7", features = ["raw"] }
unicode-xid = "0.2"
arraydeque = "0.4"
approx = "0.3"
retain_mut = "0.1"
parking_lot = "0.11.0"
num_cpus = "1.13.0"
ahash = "0.3"

[dev-dependencies]
pretty_assertions = "0.6"